syntax = "proto3";

package board;

service BoardService {
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse);
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageResponse);
  rpc StreamMessages (StreamMessagesRequest) returns (stream MessageResponse);
}

message GetMessagesRequest {
  int32 limit = 1;
}

message GetMessagesResponse {
  repeated MessageResponse messages = 1;
}

message CreateMessageRequest {
  string content = 1;
  string author = 2;
}

message CreateMessageResponse {
  bool success = 1;
  MessageResponse message = 2;
}

message StreamMessagesRequest {
  int32 limit = 1;
}

message MessageResponse {
  string id = 1;
  string content = 2;
  string author = 3;
  string timestamp = 4;
}
